@@ -79,7 +79,7 @@
       if (node = nodes[0]) {
         do {
           FIELD_NODE_NAMES[node.nodeName.toUpperCase()] &&
-            results.push(decorate(node));
+            results.push(fromElement(node));
         } while (node = element[i++]);
       }
       return results;
@@ -93,16 +93,16 @@
        results = Fuse.List(), i = 0;
 
       if (!typeName && !name) {
-        while (input = inputs[i]) results[i++] = new Field(input);
+        while (input = inputs[i]) results[i++] = fromElement(input);
       }
       else if (typeName && !name) {
         while (input = inputs[i++])
-          if (typeName === input.type) results.push(new Field(input));
+          if (typeName === input.type) results.push(fromElement(input));
       }
       else {
         while (input = inputs[i++])
           if ((!typeName || typeName === input.type) && (!name || name === input.name))
-            results.push(new Field(input));
+            results.push(fromElement(input));
       }
       return results;
     };
